--- a/hackuniversity-community-platforms.html
+++ b/hackuniversity-community-platforms.html
@@ -348,7 +348,7 @@
         <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity.html#partners">Partners</a>
         <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity.html#mission">Mission</a>
         <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank" rel="noopener noreferrer">Hackathons</a>
-        <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank" rel="noopener noreferrer">Calendar</a>
+        <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity.html#calendar" target="_blank" rel="noopener noreferrer">Calendar</a>
       </div>
     </div>
   </nav>
@@ -785,3 +785,4 @@
   </script>
 </body>
 </html>
+
