--- a/hackuniversity-discord.html
+++ b/hackuniversity-discord.html
@@ -315,7 +315,7 @@
         <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity.html#partners">Partners</a>
         <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity.html#mission">Mission</a>
         <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank" rel="noopener noreferrer">Hackathons</a>
-        <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank" rel="noopener noreferrer">Calendar</a>
+        <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity.html#calendar" target="_blank" rel="noopener noreferrer">Calendar</a>
       </div>
     </div>
   </nav>
@@ -525,3 +525,4 @@
   </script>
 </body>
 </html>
+
