--- a/hackuniversity-linktree.html
+++ b/hackuniversity-linktree.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -317,13 +317,13 @@
         <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity.html#partners">Partners</a>
         <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity.html#mission">Mission</a>
         <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank" rel="noopener noreferrer">Hackathons</a>
-        <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank" rel="noopener noreferrer">Calendar</a>
+        <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity.html#calendar" target="_blank" rel="noopener noreferrer">Calendar</a>
       </div>
     </div>
   </nav>
 
   <div class="event-clock-bar" role="status" aria-label="Event Clock - Eastern Time">
-    <span class="event-clock-label">Organization Clock - <strong>Eastern Time (ET)</strong> · Miami, FL</span>
+    <span class="event-clock-label">Organization Clock - <strong>Eastern Time (ET)</strong> Â· Miami, FL</span>
     <span id="et-clock" class="event-clock-time"></span>
     <span class="event-clock-date">(<span id="et-date"></span>)</span>
   </div>
@@ -575,3 +575,4 @@
   </script>
 </body>
 </html>
+
