--- a/hackuniversity-main-students.html
+++ b/hackuniversity-main-students.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Hack University — Empowering Tomorrow's Innovators</title>
+  <title>Hack University â€” Empowering Tomorrow's Innovators</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   <script src="https://cdn.tailwindcss.com"></script>
 
@@ -368,7 +368,7 @@
 
 /* Center the list so pills don't stretch full width */
 .portal-center {
-  max-width: 880px;          /* adjust: 760–920 looks like your screenshot */
+  max-width: 880px;          /* adjust: 760â€“920 looks like your screenshot */
   margin: 0 auto;            /* centers */
 }
 
@@ -432,7 +432,7 @@
       >Hackathons</a>
       <a
         class="nav-link"
-        href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html"
+        href="https://codecrunchglobal.vercel.app/hackuniversity.html#calendar"
         target="_blank"
         rel="noopener noreferrer"
       >Calendar</a>
@@ -474,7 +474,7 @@
 
 
     <div class="text-center mt-6">
-        <h1 class="title-xl">Empowering Tomorrow’s Innovators</h1>
+        <h1 class="title-xl">Empowering Tomorrowâ€™s Innovators</h1>
           <p class="subtitle max-w-3xl mx-auto mt-4 text-lg">
             A global ecosystem supported by
             <a href="https://gdgatfiu.vercel.app/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">
@@ -515,7 +515,7 @@
   <div class="portal-center">
 
     <h3 class="portal-title">Student Portal</h3>
-    <p class="portal-subtitle">OneStop gives you membership, hackathon registration, volunteering, and E-Board application — granting authenticated access to mailing lists and community platforms across Google Developer Group at Florida International University (GDG at FIU), Code Crunch, ColorStack at FIU, CAHSI at FIU, and Raspberry Pi Code Crunch.</p>
+    <p class="portal-subtitle">OneStop gives you membership, hackathon registration, volunteering, and E-Board application â€” granting authenticated access to mailing lists and community platforms across Google Developer Group at Florida International University (GDG at FIU), Code Crunch, ColorStack at FIU, CAHSI at FIU, and Raspberry Pi Code Crunch.</p>
 
 <div class="divider"></div>
 
@@ -573,7 +573,7 @@
         </a>
 
         <a class="portal-row portal-row--soft"
-           href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html"
+           href="https://codecrunchglobal.vercel.app/hackuniversity.html#calendar"
            target="_blank">
           <div class="portal-row-left">
             <span class="portal-icon"><i class="fa-regular fa-calendar"></i></span>
@@ -613,7 +613,7 @@
 
       <div class="grid gap-3">
         <a class="portal-row portal-row--soft"
-           href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html"
+           href="https://codecrunchglobal.vercel.app/hackuniversity.html#calendar"
            target="_blank">
           <div class="portal-row-left">
             <span class="portal-icon"><i class="fa-solid fa-video"></i></span>
@@ -690,7 +690,7 @@
         <!-- Students -->
         <!-- <article class="hu-card p-6 md:p-7">
           <h3 class="title-md">For Students</h3>
-          <p class="subtitle mt-2">OneStop gives you membership, hackathon registration, volunteering, and E-Board — all in one place.</p>
+          <p class="subtitle mt-2">OneStop gives you membership, hackathon registration, volunteering, and E-Board â€” all in one place.</p>
           <div class="divider"></div>
           <div class="grid gap-3">
             <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hackuniversity-internship.html" target="_blank">
@@ -699,7 +699,7 @@
             <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank">
               <i class="fa-solid fa-id-card-clip"></i> Join Membership<span class="text-xs opacity-80 font-semibold ml-1">13+</span>
             </a>
-            <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank">
+            <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hackuniversity.html#calendar" target="_blank">
               <i class="fa-regular fa-calendar"></i> View Calendar
             </a>
             <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank">
@@ -968,11 +968,11 @@
           <div class="hu-card p-5">
             <h3 class="font-extrabold text-xl">Membership Benefits</h3>
             <ul class="mt-3 space-y-2 text-sm subtitle">
-              <li>• Access to 20 annual interdisciplinary hackathons</li>
-              <li>• Interview prep, resume reviews, and coaching</li>
-              <li>• Startup pitch development & entrepreneurship mentoring</li>
-              <li>• Executive Board application opportunities</li>
-              <li>• Cross-discipline networking and industry access</li>
+              <li>â€¢ Access to 20 annual interdisciplinary hackathons</li>
+              <li>â€¢ Interview prep, resume reviews, and coaching</li>
+              <li>â€¢ Startup pitch development & entrepreneurship mentoring</li>
+              <li>â€¢ Executive Board application opportunities</li>
+              <li>â€¢ Cross-discipline networking and industry access</li>
             </ul>
           </div>
           <div class="hu-card p-5">
@@ -989,20 +989,20 @@
 
         <div class="hu-card p-5">
           <h3 class="font-extrabold text-xl" style="color:#166534;">Who Can Join?</h3>
-          <p class="subtitle mt-2"><strong>All majors welcome — no coding experience required.</strong></p>
+          <p class="subtitle mt-2"><strong>All majors welcome â€” no coding experience required.</strong></p>
           <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-6 gap-3 mt-4 text-center">
-            <div class="hu-card p-3"><div class="text-2xl">💻</div><div class="text-sm mt-1">CS</div></div>
-            <div class="hu-card p-3"><div class="text-2xl">⚙️</div><div class="text-sm mt-1">Engineering</div></div>
-            <div class="hu-card p-3"><div class="text-2xl">💼</div><div class="text-sm mt-1">Business</div></div>
-            <div class="hu-card p-3"><div class="text-2xl">🏥</div><div class="text-sm mt-1">Health</div></div>
-            <div class="hu-card p-3"><div class="text-2xl">⚖️</div><div class="text-sm mt-1">Law</div></div>
-            <div class="hu-card p-3"><div class="text-2xl">🎨</div><div class="text-sm mt-1">Design</div></div>
-            <div class="hu-card p-3"><div class="text-2xl">📚</div><div class="text-sm mt-1">Education</div></div>
-            <div class="hu-card p-3"><div class="text-2xl">🧬</div><div class="text-sm mt-1">Biology</div></div>
-            <div class="hu-card p-3"><div class="text-2xl">🧮</div><div class="text-sm mt-1">Math</div></div>
-            <div class="hu-card p-3"><div class="text-2xl">🔬</div><div class="text-sm mt-1">Chemistry</div></div>
-            <div class="hu-card p-3"><div class="text-2xl">🌍</div><div class="text-sm mt-1">Env. Sci</div></div>
-            <div class="hu-card p-3"><div class="text-2xl">🌟</div><div class="text-sm mt-1">Any Major</div></div>
+            <div class="hu-card p-3"><div class="text-2xl">ðŸ’»</div><div class="text-sm mt-1">CS</div></div>
+            <div class="hu-card p-3"><div class="text-2xl">âš™ï¸</div><div class="text-sm mt-1">Engineering</div></div>
+            <div class="hu-card p-3"><div class="text-2xl">ðŸ’¼</div><div class="text-sm mt-1">Business</div></div>
+            <div class="hu-card p-3"><div class="text-2xl">ðŸ¥</div><div class="text-sm mt-1">Health</div></div>
+            <div class="hu-card p-3"><div class="text-2xl">âš–ï¸</div><div class="text-sm mt-1">Law</div></div>
+            <div class="hu-card p-3"><div class="text-2xl">ðŸŽ¨</div><div class="text-sm mt-1">Design</div></div>
+            <div class="hu-card p-3"><div class="text-2xl">ðŸ“š</div><div class="text-sm mt-1">Education</div></div>
+            <div class="hu-card p-3"><div class="text-2xl">ðŸ§¬</div><div class="text-sm mt-1">Biology</div></div>
+            <div class="hu-card p-3"><div class="text-2xl">ðŸ§®</div><div class="text-sm mt-1">Math</div></div>
+            <div class="hu-card p-3"><div class="text-2xl">ðŸ”¬</div><div class="text-sm mt-1">Chemistry</div></div>
+            <div class="hu-card p-3"><div class="text-2xl">ðŸŒ</div><div class="text-sm mt-1">Env. Sci</div></div>
+            <div class="hu-card p-3"><div class="text-2xl">ðŸŒŸ</div><div class="text-sm mt-1">Any Major</div></div>
           </div>
         </div>
       </article>
@@ -1021,11 +1021,11 @@
           <a class="btn btn-light" href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank" rel="noopener">
             <i class="fa-solid fa-rocket"></i> Join Hack University Now
           </a>
-          <a class="btn btn-ghost" href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank" rel="noopener">
+          <a class="btn btn-ghost" href="https://codecrunchglobal.vercel.app/hackuniversity.html#calendar" target="_blank" rel="noopener">
             <i class="fa-regular fa-calendar"></i> View Calendar
           </a>
         </div>
-        <p class="subtitle text-sm mt-3">100% Free • Open to All Majors • Global Community • Instant Access</p>
+        <p class="subtitle text-sm mt-3">100% Free â€¢ Open to All Majors â€¢ Global Community â€¢ Instant Access</p>
       </div>
     </div>
   </section>
@@ -1038,7 +1038,7 @@
           <h4>Hack University</h4>
           <p>Empowering the next generation of innovators through collaboration and hands-on learning.</p>
           <a class="inline-block mt-2 font-semibold" href="http://HackUniversity.vercel.app" target="_blank" rel="noopener">
-            HackUniversity.vercel.app ↗
+            HackUniversity.vercel.app â†—
           </a>
 
           <div class="social-grid mt-4">
@@ -1075,9 +1075,9 @@
       </div>
 
       <div class="footer-bottom">
-        <p>© 2025 Hack University.</p>
+        <p>Â© 2025 Hack University.</p>
         <div class="credits">
-          Built with ❤️ by <a href="https://www.linkedin.com/in/iba001/" target="_blank" rel="noopener">Brian Bazurto</a>.
+          Built with â¤ï¸ by <a href="https://www.linkedin.com/in/iba001/" target="_blank" rel="noopener">Brian Bazurto</a>.
         </div>
       </div>
     </div>
@@ -1087,7 +1087,7 @@
   <script >
 
     //nav bard version 1.5.2025 
-  // ✅ Navbar JS (revised)
+  // âœ… Navbar JS (revised)
  (function () {
     const toggleBtn = document.querySelector(".nav-toggle");
     const navLinks = document.getElementById("huNavLinks");
@@ -1133,3 +1133,4 @@
   
 </body>
 </html>
+
