--- a/hackuniversity-onestopform.html
+++ b/hackuniversity-onestopform.html
@@ -269,7 +269,7 @@
       >Hackathons</a>
       <a
         class="nav-link"
-        href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html"
+        href="https://codecrunchglobal.vercel.app/hackuniversity.html#calendar"
         target="_blank"
         rel="noopener noreferrer"
       >Calendar</a>
@@ -1435,3 +1435,4 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
