--- a/hackuniversitydonate.html
+++ b/hackuniversitydonate.html
@@ -882,7 +882,7 @@
             <a class="social-btn" href="https://hackuniversity-directory.vercel.app/" target="_blank" rel="noopener" aria-label="GitHub"><i class="fab fa-github"></i></a>
             <a class="social-btn" href="https://hackuniversity-directory.vercel.app/" target="_blank" rel="noopener" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
             <a class="social-btn" href="https://codecrunchglobal.vercel.app/hackuniversity-discord.html" target="_blank" rel="noopener" aria-label="Discord"><i class="fab fa-discord"></i></a>
-            <a class="social-btn" href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank" rel="noopener" aria-label="Calendar"><i class="far fa-calendar-alt"></i></a>
+            <a class="social-btn" href="https://codecrunchglobal.vercel.app/hackuniversity.html#calendar" target="_blank" rel="noopener" aria-label="Calendar"><i class="far fa-calendar-alt"></i></a>
           </div>
         </div>
 
@@ -890,7 +890,7 @@
           <h4>Quick Links</h4>
           <ul>
             <li><a href="https://codecrunchglobal.vercel.app/hackuniversity.html#mission">Mission</a></li>
-            <li><a href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank" rel="noopener">Events</a></li>
+            <li><a href="https://codecrunchglobal.vercel.app/hackuniversity.html#calendar" target="_blank" rel="noopener">Events</a></li>
             <li><a href="https://photos.app.goo.gl/71FC5SLTQcPRbXjx6" target="_blank" rel="noopener">Photo Album</a></li>
             <li><a href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank" rel="noopener">Hackathons</a></li>
             <li><a href="https://hackuniversity-membership.vercel.app/" target="_blank" rel="noopener">Membership</a></li>
@@ -937,3 +937,4 @@
   </script>
 </body>
 </html>
+
