--- a/navbar.html
+++ b/navbar.html
@@ -1,4 +1,4 @@
-//version 1.5.2026
+﻿//version 1.5.2026
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
 //css 
@@ -105,7 +105,7 @@
           <a class="nav-link" href="#partners">Partners</a>
           <a class="nav-link" href="#mission">Mission</a>
           <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank" rel="noopener noreferrer">Hackathons</a>
-          <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank" rel="noopener noreferrer">Calendar</a>
+          <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity.html#calendar" target="_blank" rel="noopener noreferrer">Calendar</a>
         </div>
       </div>
     </nav>
