--- a/hackuniversity-hackathons.html
+++ b/hackuniversity-hackathons.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Hack University — Hackathon Events</title>
+  <title>Hack University â€” Hackathon Events</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <script src="https://cdn.tailwindcss.com"></script>
 
@@ -61,7 +61,7 @@
     .quick-title { font-weight: 700; font-size: 18px; margin: 6px 0 12px; color: var(--color-text); }
     .link-line{ display:flex; flex-wrap:wrap; align-items:center; justify-content:center; gap:8px; line-height:1.3; }
     .link-line li{ list-style:none; position:relative; display:flex; align-items:center; }
-    .link-line li:not(:last-child)::after{ content:"•"; color:var(--color-text-muted); margin:0 6px; pointer-events:none; user-select:none; }
+    .link-line li:not(:last-child)::after{ content:"â€¢"; color:var(--color-text-muted); margin:0 6px; pointer-events:none; user-select:none; }
     .chip{ appearance:none; border:1px solid var(--color-border); background:var(--color-bg-white); color:var(--color-text);
       padding:10px 12px; border-radius: var(--radius-md); font-weight:700; text-decoration:none;
       display:inline-flex; align-items:center; gap:.5ch;
@@ -194,7 +194,7 @@
       border-top: 1px solid var(--color-border);
     }
 
-    /* secondary buttons look like “pills” */
+    /* secondary buttons look like â€œpillsâ€ */
     .h-actions-secondary .hackathon-link{
       background: #f1f3f4;
       color: var(--color-text);
@@ -394,7 +394,7 @@
         <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity.html#partners">Partners</a>
         <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity.html#mission">Mission</a>
         <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank" rel="noopener noreferrer">Hackathons</a>
-        <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank" rel="noopener noreferrer">Calendar</a>
+        <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity.html#calendar" target="_blank" rel="noopener noreferrer">Calendar</a>
       </div>
     </div>
   </nav>
@@ -494,7 +494,7 @@
         </div>
 
         <p class="mt-5 text-gray-600 leading-relaxed">
-          Open to everyone worldwide — beginners, advanced builders, and non-tech majors welcome.
+          Open to everyone worldwide â€” beginners, advanced builders, and non-tech majors welcome.
           No prior experience needed. Ages 16+ accepted (under 18 requires parental or guardian consent).
         </p>
       </div>
@@ -503,35 +503,35 @@
 
   <!-- Time Zone Section -->
   <div class="timezone-section" aria-labelledby="hq-title">
-    <div class="timezone-header"><h2 id="hq-title">🏆 Hackathon HQ</h2></div>
+    <div class="timezone-header"><h2 id="hq-title">ðŸ† Hackathon HQ</h2></div>
     <div class="timezone-grid">
       <div class="timezone-item" aria-live="polite">
-        <div class="timezone-flag">🇺🇸 - HQ</div>
+        <div class="timezone-flag">ðŸ‡ºðŸ‡¸ - HQ</div>
         <div class="timezone-time" id="miami-time">--:--:--</div>
         <div class="timezone-location" id="miami-label">Miami, FL (ET)</div>
       </div>
       <div class="timezone-item" aria-live="polite">
-        <div class="timezone-flag">🇪🇺</div>
+        <div class="timezone-flag">ðŸ‡ªðŸ‡º</div>
         <div class="timezone-time" id="london-time">--:--:--</div>
         <div class="timezone-location">London (GMT)</div>
       </div>
       <div class="timezone-item" aria-live="polite">
-        <div class="timezone-flag">🌍</div>
+        <div class="timezone-flag">ðŸŒ</div>
         <div class="timezone-time" id="lagos-time">--:--:--</div>
         <div class="timezone-location">Lagos (WAT)</div>
       </div>
       <div class="timezone-item" aria-live="polite">
-        <div class="timezone-flag">🌏</div>
+        <div class="timezone-flag">ðŸŒ</div>
         <div class="timezone-time" id="tokyo-time">--:--:--</div>
         <div class="timezone-location">Tokyo (JST)</div>
       </div>
       <div class="timezone-item" aria-live="polite">
-        <div class="timezone-flag">🇦🇺</div>
+        <div class="timezone-flag">ðŸ‡¦ðŸ‡º</div>
         <div class="timezone-time" id="sydney-time">--:--:--</div>
         <div class="timezone-location">Sydney (AEDT)</div>
       </div>
       <div class="timezone-item" aria-live="polite">
-        <div class="timezone-flag">🇮🇳</div>
+        <div class="timezone-flag">ðŸ‡®ðŸ‡³</div>
         <div class="timezone-time" id="mumbai-time">--:--:--</div>
         <div class="timezone-location">Mumbai (IST)</div>
       </div>
@@ -589,12 +589,12 @@
           </div>
         </li>
         <li>
-          <a class="chip" href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" aria-describedby="tip-cal" target="_blank" rel="noopener">
+          <a class="chip" href="https://codecrunchglobal.vercel.app/hackuniversity.html#calendar" aria-describedby="tip-cal" target="_blank" rel="noopener">
             <i class="ico far fa-calendar-alt" aria-hidden="true"></i> Google Calendar
           </a>
           <div class="tip" id="tip-cal" role="tooltip">
             <p>Add events to your calendar and never miss a workshop or hack.</p>
-            <a class="btn" href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank" rel="noopener">View Calendar</a>
+            <a class="btn" href="https://codecrunchglobal.vercel.app/hackuniversity.html#calendar" target="_blank" rel="noopener">View Calendar</a>
           </div>
         </li>
       </ul>
@@ -610,13 +610,13 @@
       <br>
 
       <div class="section-header">
-        <h3>🚀 ACTIVE MISSIONS</h3>
+        <h3>ðŸš€ ACTIVE MISSIONS</h3>
         <p>Upcoming events sorted by date</p>
       </div>
       <div class="hackathons-list" id="upcoming-events"></div>
 
       <div class="section-header" style="margin-top: 48px;">
-        <h3>📚 PAST EVENTS</h3>
+        <h3>ðŸ“š PAST EVENTS</h3>
         <p>Completed hackathons and events</p>
       </div>
       <div class="hackathons-list" id="past-events"></div>
@@ -628,7 +628,7 @@
     <div class="footer-container">
       <div class="footer-grid">
         <section aria-labelledby="footer-about">
-          <h3 id="footer-about">Hack University <span aria-hidden="true">🧑🏻‍💻🧑🏼‍💻🧑🏽‍💻🧑🏾‍💻🧑🏿‍💻</span></h3>
+          <h3 id="footer-about">Hack University <span aria-hidden="true">ðŸ§‘ðŸ»â€ðŸ’»ðŸ§‘ðŸ¼â€ðŸ’»ðŸ§‘ðŸ½â€ðŸ’»ðŸ§‘ðŸ¾â€ðŸ’»ðŸ§‘ðŸ¿â€ðŸ’»</span></h3>
           <p>
             A collaborative effort uniting multiple student organizations and global communities with a mission
             to empower the next generation of innovators, developers, and leaders.
@@ -652,7 +652,7 @@
             <a class="social-item" href="https://hackuniversity.vercel.app" aria-label="Join our Discord" target="_blank" rel="noopener">
               <i class="fab fa-discord"></i><span>Discord</span>
             </a>
-            <a class="social-item" href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" aria-label="Events Calendar" target="_blank" rel="noopener">
+            <a class="social-item" href="https://codecrunchglobal.vercel.app/hackuniversity.html#calendar" aria-label="Events Calendar" target="_blank" rel="noopener">
               <i class="far fa-calendar-alt"></i><span>Calendar</span>
             </a>
           </div>
@@ -681,10 +681,10 @@
       </div>
 
       <div class="footer-bottom">
-        <p>© <span id="year"></span> Hack University. All rights reserved.</p>
+        <p>Â© <span id="year"></span> Hack University. All rights reserved.</p>
         <div class="credits">
-          Built with ❤️ for the tech community by
-          <a href="https://www.linkedin.com/in/iba001/" target="_blank" rel="noopener">Brian Bazurto</a> · Powered by innovation and collaboration
+          Built with â¤ï¸ for the tech community by
+          <a href="https://www.linkedin.com/in/iba001/" target="_blank" rel="noopener">Brian Bazurto</a> Â· Powered by innovation and collaboration
         </div>
       </div>
     </div>
@@ -737,7 +737,7 @@
       if (now <= end) {
         const { d, h, m } = diffDHMS(end - now);
         const label = d > 0 ? `${d}d ${h}h left` : `${h}h ${m}m left`;
-        return { text: `Live — ${label}`, isPast: false, isLive: true, cls: 'countdown-live' };
+        return { text: `Live â€” ${label}`, isPast: false, isLive: true, cls: 'countdown-live' };
       }
 
       return { text: 'Completed', isPast: true, isLive: false, cls: 'countdown-past' };
@@ -904,7 +904,7 @@
     /* ---------- Hackathon data ---------- */
     const hackathons = [
       {
-        name: '🪖 305 Hackathon: Edition Nov 2025 - Session A (Online)',
+        name: 'ðŸª– 305 Hackathon: Edition Nov 2025 - Session A (Online)',
         theme: 'Theme: Veterans & DefenseTech',
         startDate: '2025-11-07',
         endDate:   '2025-11-15',
@@ -919,7 +919,7 @@
         prizesEnable: false, prizesUrl: "https://"
       },
       {
-        name: '🪖 305 Hackathon: Edition Nov 2025 - Session B (In-Person)',
+        name: 'ðŸª– 305 Hackathon: Edition Nov 2025 - Session B (In-Person)',
         theme: 'Theme: Veterans & DefenseTech',
         startDate: '2025-11-15',
         endDate:   '2025-11-15',
@@ -938,7 +938,7 @@
 
       // CodeFest 2025
       {
-        name: '🎆 CodeFest 2025 - Session A (Online/Synchronous)',
+        name: 'ðŸŽ† CodeFest 2025 - Session A (Online/Synchronous)',
         theme: 'Marketing, Business, Finance, and AI',
         startDate: '2025-11-28',
         endDate:   '2025-12-06',
@@ -955,7 +955,7 @@
         prizesEnable: false, prizesUrl: "https://"
       },
       {
-        name: '🎆 CodeFest 2025 - Session B (In-person)',
+        name: 'ðŸŽ† CodeFest 2025 - Session B (In-person)',
         theme: 'Marketing, Business, Finance, and AI',
         startDate: '2025-12-06',
         endDate:   '2025-12-06',
@@ -990,7 +990,7 @@
 
       // Jan 2026
       {
-        name: '🏥 305 Hackathon Edition Jan 2026 - Session A (Online/Synchronous)',
+        name: 'ðŸ¥ 305 Hackathon Edition Jan 2026 - Session A (Online/Synchronous)',
         theme: 'AI in Healthcare & Biotech',
         startDate: '2026-01-16',
         endDate:   '2026-01-24',
@@ -1006,7 +1006,7 @@
         prizesEnable:  true, prizesUrl: "https://github.com/CODE-CRUNCH-CLUB/event-prizes/blob/main/2026-305-hackathon-SA-&-SB-JAN-2026.md"
       },
       {
-        name: '🏥 305 Hackathon Edition Jan 2026 - Session B (In-person)',
+        name: 'ðŸ¥ 305 Hackathon Edition Jan 2026 - Session B (In-person)',
         theme: 'AI in Healthcare & Biotech',
         startDate: '2026-01-24',
         endDate:   '2026-01-24',
@@ -1026,7 +1026,7 @@
       {
 
 
-        name: '🔥 Hack Fiesta Miami 2026 Edition Feb 2026 - Session A (Online/Synchronous)',
+        name: 'ðŸ”¥ Hack Fiesta Miami 2026 Edition Feb 2026 - Session A (Online/Synchronous)',
 
 
         theme: 'Mechanical, Electrical & Hardware Innovation',
@@ -1046,7 +1046,7 @@
       {
 
 
-        name: '🔥 Hack Fiesta Miami 2026 Edition Feb 2026 - Session B (In-person)',
+        name: 'ðŸ”¥ Hack Fiesta Miami 2026 Edition Feb 2026 - Session B (In-person)',
         theme: 'Mechanical, Electrical & Hardware Innovation',
         startDate: '2026-02-14',
         endDate:   '2026-02-14',
@@ -1065,7 +1065,7 @@
       // March 2026
       {
 
-        name: '🤖 305 Hackathon Edition Mar 2026 - Session A (Online/Synchronous)',
+        name: 'ðŸ¤– 305 Hackathon Edition Mar 2026 - Session A (Online/Synchronous)',
         theme: 'AI Startups & Venture Innovation',
         startDate: '2026-03-13',
         endDate:   '2026-03-20',
@@ -1081,7 +1081,7 @@
         prizesEnable: false, prizesUrl: "https://"
       },
       {
-        name: '🤖 305 Hackathon Edition Mar 2026 - Session B (In-person)',
+        name: 'ðŸ¤– 305 Hackathon Edition Mar 2026 - Session B (In-person)',
         theme: 'AI Startups & Venture Innovation',
         startDate: '2026-03-20',
         endDate:   '2026-03-20',
@@ -1099,7 +1099,7 @@
 
       // April 2026
       {
-        name: '⚖️ 305 Hackathon Edition Apr 2026 - Session A (Online/Synchronous)',
+        name: 'âš–ï¸ 305 Hackathon Edition Apr 2026 - Session A (Online/Synchronous)',
         theme: 'Law, Compliance, & Cybersecurity',
         startDate: '2026-04-03',
         endDate:   '2026-04-11',
@@ -1115,7 +1115,7 @@
         prizesEnable: false, prizesUrl: "https://"
       },
       {
-        name: '⚖️ 305 Hackathon Edition Apr 2026 - Session B (In-person)',
+        name: 'âš–ï¸ 305 Hackathon Edition Apr 2026 - Session B (In-person)',
         theme: 'Law, Compliance, & Cybersecurity',
         startDate: '2026-04-11',
         endDate:   '2026-04-11',
@@ -1133,7 +1133,7 @@
 
       // May 2026
       {
-        name: '📈 CodeStorm 2026 - Online/Synchronous',
+        name: 'ðŸ“ˆ CodeStorm 2026 - Online/Synchronous',
         theme: 'Marketing, Media, & Creative AI',
         startDate: '2026-05-01',
         endDate:   '2026-05-09',
@@ -1151,7 +1151,7 @@
 
       // June 2026
       {
-        name: '🤖 305 Hackathon Edition Jun 2026 - Online/Synchronous',
+        name: 'ðŸ¤– 305 Hackathon Edition Jun 2026 - Online/Synchronous',
         theme: 'Automation & Productivity Tools',
         startDate: '2026-06-05',
         endDate:   '2026-06-13',
@@ -1169,7 +1169,7 @@
 
       // July 2026
       {
-        name: '💰 SummerCodeX 2026 - Online/Synchronous',
+        name: 'ðŸ’° SummerCodeX 2026 - Online/Synchronous',
         theme: 'Finance, FinTech & Data Science',
         startDate: '2026-07-03',
         endDate:   '2026-07-11',
@@ -1187,7 +1187,7 @@
 
       // August 2026
       {
-        name: '🎓 305 Hackathon Edition Aug 2026 - Online/Synchronous',
+        name: 'ðŸŽ“ 305 Hackathon Edition Aug 2026 - Online/Synchronous',
         theme: 'EdTech & Student Experience',
         startDate: '2026-08-07',
         endDate:   '2026-08-15',
@@ -1205,7 +1205,7 @@
 
       // Sep 2026
       {
-        name: '🌱 305 Hackathon Edition Sep 2026 - Session A (Online/Synchronous)',
+        name: 'ðŸŒ± 305 Hackathon Edition Sep 2026 - Session A (Online/Synchronous)',
         theme: 'CivicTech & Sustainability',
         startDate: '2026-09-04',
         endDate:   '2026-09-12',
@@ -1221,7 +1221,7 @@
         prizesEnable: false, prizesUrl: "https://"
       },
       {
-        name: '🌱 305 Hackathon Edition Sep 2026 - Session B (In-person)',
+        name: 'ðŸŒ± 305 Hackathon Edition Sep 2026 - Session B (In-person)',
         theme: 'CivicTech & Sustainability',
         startDate: '2026-09-12',
         endDate:   '2026-09-12',
@@ -1239,7 +1239,7 @@
 
       // EmpowHER 2026
       {
-        name: '👑 EmpowHER Hackathon 2026 - Session A (Online/Synchronous)',
+        name: 'ðŸ‘‘ EmpowHER Hackathon 2026 - Session A (Online/Synchronous)',
         theme: 'Leadership & Accessibility',
         startDate: '2026-09-25',
         endDate:   '2026-10-03',
@@ -1255,7 +1255,7 @@
         prizesEnable: false, prizesUrl: "https://"
       },
       {
-        name: '👑 EmpowHER Hackathon 2026 - Session B (In-person)',
+        name: 'ðŸ‘‘ EmpowHER Hackathon 2026 - Session B (In-person)',
         theme: 'Leadership & Accessibility',
         startDate: '2026-10-03',
         endDate:   '2026-10-03',
@@ -1273,7 +1273,7 @@
 
       // Nov 2026
       {
-        name: '🪖 305 Hackathon Nov 2026 - Session A (Online/Synchronous)',
+        name: 'ðŸª– 305 Hackathon Nov 2026 - Session A (Online/Synchronous)',
         theme: 'DefenseTech, Security, & Veterans Support',
         startDate: '2026-10-30',
         endDate:   '2026-11-07',
@@ -1289,7 +1289,7 @@
         prizesEnable: false, prizesUrl: "https://"
       },
       {
-        name: '🪖 305 Hackathon Nov 2026 - Session B (In-person)',
+        name: 'ðŸª– 305 Hackathon Nov 2026 - Session B (In-person)',
         theme: 'DefenseTech, Security, & Veterans Support',
         startDate: '2026-11-07',
         endDate:   '2026-11-07',
@@ -1307,7 +1307,7 @@
 
       // CodeFest 2026
       {
-        name: '🎆 CodeFest Hackathon 2026 - Session A (Online/Synchronous)',
+        name: 'ðŸŽ† CodeFest Hackathon 2026 - Session A (Online/Synchronous)',
         theme: 'Business, Marketing, Finance & AI',
         startDate: '2026-11-13',
         endDate:   '2026-11-21',
@@ -1323,7 +1323,7 @@
         prizesEnable: false, prizesUrl: "https://"
       },
       {
-        name: '🎆 CodeFest Hackathon 2026 - Session B (In-person)',
+        name: 'ðŸŽ† CodeFest Hackathon 2026 - Session B (In-person)',
         theme: 'Business, Marketing, Finance & AI',
         startDate: '2026-11-21',
         endDate:   '2026-11-21',
@@ -1348,7 +1348,7 @@
 
 
       {
-        name: '🏙️ 305 Hackathon: Fall 2025 edition',
+        name: 'ðŸ™ï¸ 305 Hackathon: Fall 2025 edition',
         startDate: '2025-09-19',
         endDate:   '2025-09-21',
         modality:  'in-person',
@@ -1362,7 +1362,7 @@
         prizesEnable: false, prizesUrl: "https://"
       },
       {
-        name: '👑 EmpowHER Hackathon 2025',
+        name: 'ðŸ‘‘ EmpowHER Hackathon 2025',
         startDate: '2025-10-13',
         endDate:   '2025-10-20',
         modality:  'virtual',
@@ -1377,7 +1377,7 @@
         prizesEnable: false, prizesUrl: "https://"
       },
       {
-        name: '👑 EmpowHER HackDAY 2025',
+        name: 'ðŸ‘‘ EmpowHER HackDAY 2025',
         startDate: '2025-10-18',
         endDate:   '2025-10-18',
         modality:  'in-person',
@@ -1392,7 +1392,7 @@
         prizesEnable: false, prizesUrl: "https://"
       },
       {
-        name: '🌟 SummerCodeX 2025',
+        name: 'ðŸŒŸ SummerCodeX 2025',
         startDate: '2025-07-21',
         endDate:   '2025-07-28',
         modality:  'virtual',
@@ -1407,7 +1407,7 @@
         prizesEnable: false, prizesUrl: "https://"
       },
       {
-        name: '⛈️ CodeStorm 2025',
+        name: 'â›ˆï¸ CodeStorm 2025',
         startDate: '2025-05-19',
         endDate:   '2025-05-26',
         modality:  'virtual',
@@ -1422,7 +1422,7 @@
         prizesEnable: false, prizesUrl: "https://"
       },
       {
-        name: '⚡ 305 Hackathon: Spring 2025 edition',
+        name: 'âš¡ 305 Hackathon: Spring 2025 edition',
         startDate: '2025-03-29',
         endDate:   '2025-03-31',
         modality:  'hybrid',
@@ -1437,7 +1437,7 @@
         prizesEnable: false, prizesUrl: "https://"
       },
       {
-        name: '🔥 HackFiesta Miami 2025',
+        name: 'ðŸ”¥ HackFiesta Miami 2025',
         startDate: '2025-03-21',
         endDate:   '2025-03-23',
         modality:  'virtual',
@@ -1476,10 +1476,10 @@
         const isPast = now > endOfDayET;
 
         const note = (h.registrationViaOneStop === true && (isComingSoonUrl(h.url) || !isValidUrl(h.url)))
-          ? `Website coming soon — Register now using the One-Stop Form.`
+          ? `Website coming soon â€” Register now using the One-Stop Form.`
           : ``;
 
-        // ✅ UPDATED: apply your new primary-button behavior
+        // âœ… UPDATED: apply your new primary-button behavior
         const { primary, secondary } = buildButtons(h, isPast);
 
         const html = `
@@ -1577,3 +1577,4 @@
   </script>
 </body>
 </html>
+
