--- a/hackathonvolunteer-certificates-305jan2026.html
+++ b/hackathonvolunteer-certificates-305jan2026.html
@@ -61,6 +61,14 @@
       display:flex;flex-direction:column;page-break-inside:avoid;
       position:relative;
     }
+    .certificate-page::before{
+      content:"";
+      position:absolute;
+      top:10px;right:10px;bottom:10px;left:10px;
+      border:2px solid #D4AF37;
+      border-radius:6px;
+      pointer-events:none;
+    }
     .certificate-page h1{font-size:3.5rem;font-weight:700;margin-bottom:.5rem;letter-spacing:3px;color:#333}
     .certificate-page .sub{font-size:1.2rem;color:#666;letter-spacing:4px}
     .presented{font-style:italic;margin:30px 0;font-size:1.1rem;text-align:center}
@@ -109,6 +117,11 @@
         width:277mm!important;height:190mm!important;
         border:8mm solid #B8860B!important;border-radius:0!important;padding:15mm!important;margin:0!important;
         display:flex;flex-direction:column;
+      }
+      .certificate-page::before{
+        top:4mm;right:4mm;bottom:4mm;left:4mm;
+        border:1.2mm solid #D4AF37;
+        border-radius:0;
       }
       .content-wrap{flex:1 1 auto;min-height:0}
       .cert-bottom{margin-top:auto}
